# primes

./: CMakeLists.txt  README.md  main.cpp  primes.h
primes/: prime_inner_container.cpp  prime_inner_container.h  primes.cpp  primes.h
tests/: container-tests.cpp  first-primes.cpp  first-primes.h  prime-search.cpp
